--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
         "no-unused-vars": "warn",
         "no-unused-expressions":"error",
         "prefer-const":"error",
-        "no-console":"warn"
+        "no-console":"warn",
+        "no-undef":"error"
 
     },
     "globals": {
